<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">create an account</string>
    <string name="or">or</string>
    <string name="continue_google">continue with google</string>
    <string name="login_phone_number">Enter phone number</string>
    <string name="submit">Submit</string>
    <string name="general_error">Something went wrong!</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="country">Country</string>
    <string name="OneDayForecast">1DayForecast</string>
    <string name="FiveDayForecast">5DayForecast</string>
    <string name="Date">Date</string>
    <string name="Temperature_Maximum">Max Temp</string>
    <string name="Temperature_Minimum">Min Temp</string>
    <string name="Day">Day</string>
    <string name="Night">Night</string>
    <string name="More_Info">More Info</string>
    <string name="web_client_id">579984903878-gclu0ior2db80a98il3e488seo06sgg9.apps.googleusercontent.com</string>

</resources>