<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/radius_12"
    android:layout_margin="@dimen/padding_20"
    app:cardElevation="@dimen/elevation_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_20"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            style="@style/regularText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/Date"
            style="@style/regularText"
            app:layout_constraintStart_toEndOf="@id/date_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/max_temp_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Temperature_Maximum"
            style="@style/regularText"
            app:layout_constraintTop_toBottomOf="@id/date_label"
            android:layout_marginVertical="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/max_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/Temperature_Maximum"
            style="@style/regularText"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toEndOf="@id/max_temp_label"
            android:layout_marginVertical="@dimen/margin_10"
            app:layout_constraintWidth_percent="0.5"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/min_temp_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Temperature_Minimum"
            style="@style/regularText"
            app:layout_constraintTop_toBottomOf="@id/max_temp_label"
            android:layout_marginVertical="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/min_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/Temperature_Minimum"
            style="@style/regularText"
            app:layout_constraintTop_toBottomOf="@id/max_temp"
            app:layout_constraintStart_toEndOf="@id/min_temp_label"
            android:layout_marginVertical="@dimen/margin_10"
            app:layout_constraintWidth_percent="0.5"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/day_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Day"
            style="@style/regularText"
            app:layout_constraintTop_toBottomOf="@id/min_temp_label"
            android:layout_marginVertical="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/Day"
            style="@style/regularText"
            app:layout_constraintTop_toBottomOf="@id/min_temp"
            app:layout_constraintStart_toEndOf="@id/day_label"
            android:layout_marginVertical="@dimen/margin_10"
            app:layout_constraintWidth_percent="0.5"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/night_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Night"
            style="@style/regularText"
            app:layout_constraintTop_toBottomOf="@id/day_label"
            android:layout_marginVertical="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/night"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/Day"
            style="@style/regularText"
            app:layout_constraintTop_toBottomOf="@id/day"
            app:layout_constraintStart_toEndOf="@id/night_label"
            android:layout_marginVertical="@dimen/margin_10"
            app:layout_constraintWidth_percent="0.5"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/night"
            android:layout_marginVertical="@dimen/margin_20"
            android:text="@string/More_Info"
            style="@style/regularText"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
